--- a/miniapp/pages/timelong/timelong.wxml
+++ b/miniapp/pages/timelong/timelong.wxml
@@ -1,4 +1,9 @@
 <!--pages/timelong.wxml-->
 
-<text>已认证的时长: {{time.done}}</text>
-<text>未认证时长: {{time.undone}}</text>
+<i-panel title="时长" hide-border="{{ true }}">
+    <text>已认证:{{time.done}}小时 未认证:{{time.undone}}</text>
+</i-panel>
+
+<i-panel title="参与活动">
+    <text>todo...</text>
+</i-panel>
